--- a/Aula_01/mushrooms.ipynb
+++ b/Aula_01/mushrooms.ipynb
@@ -33,7 +33,6 @@
     "id": "TM9z8PpMQ7U8"
    },
    "source": [
-    "<a id=01></a>\n",
     "## Importação e carregamento da base de dados  \n",
     "\n",
     "Nesse estudo de caso, a base de dados está disponível em um arquivo `.xlsx` (Excel).   \n",
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -123,16 +122,16 @@
     "id": "ubUcSRxbUNVu"
    },
    "source": [
-    "A biblioteca `pandas` utiliza uma estrutura de dados tabulados, denominada `DataFrame`, para amazenar os dados contidos no arquivo Excel.\n",
+    "A biblioteca `pandas` utiliza uma estrutura de dados tabulados, denominada `DataFrame`, para armazenar os dados contidos no arquivo Excel.\n",
     "\n",
-    "Acima, esses dados foram carregados em um `DataFrame` e, pos sua vez, essa estrutura foi atribuída à variável `mushrooms`.\n",
+    "Acima, esses dados foram carregados em um `DataFrame` e, por sua vez, essa estrutura foi atribuída à variável `mushrooms`.\n",
     "\n",
     "O método `type()` permite verificar qual o tipo da estrutura armazenada nessa variável."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -149,7 +148,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +176,6 @@
     "id": "4h0yp4c9vuJd"
    },
    "source": [
-    "<a id=02></a>\n",
     "## Visualização da base de dados"
    ]
   },
@@ -193,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -210,7 +208,7 @@
        "(5936, 22)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,12 +224,12 @@
     "id": "gkYQQ-skV3jl"
    },
    "source": [
-    "Como a maioria das base de dados possui uma grande quantidade de linhas, podemos utilizar o método `head()`, que exibe apenas suas cinco primeiras linhas; ou `tail()`, que exibe as cinco últimas. "
+    "Como a maioria das bases de dados possui uma grande quantidade de linhas, podemos utilizar o método `head()`, que exibe apenas suas cinco primeiras linhas; ou `tail()`, que exibe as cinco últimas. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -444,7 +442,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,16 +458,15 @@
     "id": "7q8b1vIsZ425"
    },
    "source": [
-    "<a id=03></a>\n",
     "## Estatísticas\n",
     "Em princípio, todas as variáveis do dataset são categóricas.\n",
     "\n",
-    "Podemos verificar rapidamente essa informção utilizando o método `info()`."
+    "Podemos verificar rapidamente essa informação utilizando o método `info()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -534,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -548,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -621,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -642,7 +639,7 @@
    "source": [
     "O método `describe()` exibe algumas medidas estatíticas.   \n",
     "\n",
-    "Para variáveis categóricas, esse método exibe exibe as seguintes medidas:  \n",
+    "Para variáveis categóricas, esse método exibe as seguintes medidas:  \n",
     "\n",
     "* count - Quantidade de observações contidas na coluna;\n",
     "* unique - Número de observações distindas;\n",
@@ -652,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -843,7 +840,7 @@
        "[4 rows x 22 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1089,12 +1086,11 @@
     "id": "ZuQvH0DwDnOM"
    },
    "source": [
-    "<a id=04></a>\n",
     "## Gráficos\n",
     "\n",
     "Utilizaremos nessa sessão o __gráfico de barras__, um dos mais indicados para  dados categóricos.\n",
     "\n",
-    "plotaremos os gráficos referentes as seguintes variáveis do dataset:\n",
+    "Plotaremos os gráficos referentes as seguintes variáveis do dataset:\n",
     "\n",
     "* odor;\n",
     "* veil.color;\n",
@@ -1106,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1155,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1209,12 +1205,12 @@
    "source": [
     "Diferentemente do observado no RapidMiner e R, somente por meio desse gráfico não conseguimos visualizar a presença de observaçãos de cor amarelo.\n",
     "\n",
-    "Apesar desse atributo possuir apenas duas variáveis (branca e amarela), Há uma diverença significativa entre suas frequências. E a cor amarela representa apenas 1(um) por cento desses valores."
+    "Apesar desse atributo possuir apenas duas variáveis (branca e amarela), Há uma diferença significativa entre suas frequências. E a cor amarela representa apenas 1(um) por cento desses valores."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1233,7 +1229,7 @@
        "Name: veil.color, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,14 +1245,14 @@
     "id": "GuqWgL3ZPGIO"
    },
    "source": [
-    "Uma forma de compararmos variáveis com diferenças significativas de escala, seria utlizado a escala __logarítmica__.\n",
+    "Uma forma de compararmos variáveis com diferenças significativas de escala, seria utlizando a escala __logarítmica__.\n",
     "\n",
     "Faremos uma pequena alteração no código acima, modificando a escala das frequências para __logarítmica__. Dessa forma, poderemos visualizar os dados da cor amarela."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1304,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1351,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1370,7 +1366,7 @@
        "Name: class, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,13 +1383,12 @@
     "id": "bmxEjD19T_GC"
    },
    "source": [
-    "<a id=05></a>\n",
     "## Árvore de decisão"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1416,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1430,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1444,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1473,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1693,7 +1688,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1715,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1732,7 +1727,7 @@
        "((5936, 21), (5936,), (4155, 21), (1781, 21), (4155,), (1781,))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1753,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1787,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1861,7 +1856,7 @@
        "All          1131        650  1781"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1881,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1916,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2042,10 +2037,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7f3227c93410>"
+       "<graphviz.files.Source at 0x7f5f2341ea50>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
